tests/paczka1/fuzzy1/60903124.err
Error in line 5: nQjYhDm S180 88,9
Error in line 6: nQjYhDm S287 67,5
Error in line 8: nQjYhDm S180 45,9
Error in line 10: nQjYhDm A374 69,0
Error in line 15: 2kSB6gsoe S116 55,2
Error in line 23: nQjYhDm S116 8,5
Error in line 40: 2kSB6gsoe A374 -1,4
